Rebase docker images onto pypa/manylinux2010
This gets us patchelf 0.10 for free, which fixes
https://github.com/NixOS/patchelf/pull/48 which causes patchelf to struggle with
openssl libraries that are installed with 555 permissions.

--- a/scripts/Dockerfile.kafka-cffi-pypy-builder
+++ b/scripts/Dockerfile.kafka-cffi-pypy-builder
@@ -1,7 +1,6 @@
-FROM quay.io/wenxiang/pypy-wheel-builder
+FROM pypywheels/manylinux2010-pypy_x86_64:latest
 
 COPY scripts/install-libs.sh /tmp
 RUN /tmp/install-libs.sh
 
 WORKDIR /app
-
