--- a/scripts/Dockerfile.pypy-wheel-builder
+++ b/scripts/Dockerfile.pypy-wheel-builder
@@ -1,10 +1,7 @@
-FROM centos:6
+FROM pypywheels/manylinux2010-pypy_x86_64:latest
 
-RUN curl https://bootstrap.pypa.io/get-pip.py > /tmp/get-pip.py && \
-    yum install -y git gcc-c++ && \
-    mkdir /opt/python
-
-RUN mkdir /opt/python/pp2501 && cd $_ && \
+RUN mkdir /opt/pypy/pypy2.7-5.0.1 && cd $_ && \
+    ln -s $(pwd) /opt/python/pp27-pypy50
     curl -L https://bitbucket.org/squeaky/portable-pypy/downloads/pypy-5.0.1-linux_x86_64-portable.tar.bz2 | \
     tar xj --strip-components=1 && \
     bin/pypy /tmp/get-pip.py
@@ -23,7 +20,7 @@ RUN mkdir /opt/python/pp3510 && cd $_ && \
     curl -L https://bitbucket.org/squeaky/portable-pypy/downloads/pypy3.5-5.10.0-linux_x86_64-portable.tar.bz2 | \
     tar xj --strip-components=1 && \
     bin/pypy /tmp/get-pip.py
-    
+
 RUN mkdir /opt/python/pp360 && cd $_ && \
     curl -L https://bitbucket.org/squeaky/portable-pypy/downloads/pypy3.5-6.0.0-linux_x86_64-portable.tar.bz2 | \
     tar xj --strip-components=1 && \
@@ -31,9 +28,3 @@ RUN mkdir /opt/python/pp360 && cd $_ && \
     bin/pip install \
       git+https://github.com/pypa/auditwheel.git@e82ad40 \
       cffi
-
-RUN mkdir /tmp/patchelf && cd $_ && \
-    curl -L https://nixos.org/releases/patchelf/patchelf-0.9/patchelf-0.9.tar.gz | \
-    tar xz --strip-components=1 && \
-    ./configure && make && make install && \
-    rm -rf /tmp/patchelf
