--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,9 @@ matrix:
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE="quay.io/hyperair/kafka-cffi-manylinux-builder:manylinux-upgrade"
 
 install:
-  - pip install twine cibuildwheel==0.12.0
-
-  # hack to get libffi-devel installed for cpython3.4. ideally this should be in
-  # install-libs.sh, but quay.io is broken right now.
-  - docker pull "$CIBW_MANYLINUX1_X86_64_IMAGE"
-  - docker run --name=kafka-cffi-manylinux-builder "$CIBW_MANYLINUX1_X86_64_IMAGE" yum install -y libffi-devel
-  - docker commit kafka-cffi-manylinux-builder "$CIBW_MANYLINUX1_X86_64_IMAGE"
+  - pip install twine
+  # install custom cibuildwheel branch with pypy41 abi support
+  - pip install git+https://github.com/hyperair/cibuildwheel@pypy41-abi#egg=cibuildwheel
 
 script:
   - cibuildwheel --output-dir wheelhouse
